--- a/AnalyticsIndia-WEB/labs/bayes/index.html
+++ b/AnalyticsIndia-WEB/labs/bayes/index.html
@@ -131,9 +131,18 @@
         <!-- SECTION 2: THE LAB -->
         <section class="lab-workspace">
             <h2>The Unit Square Experiment</h2>
-            <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
-                Drag the lines to change the probabilities. See how the "True Positive" area (Dark Blue) compares to the
-                "False Positive" area (Light Red).
+            <p style="color: var(--text-secondary); margin-bottom: 1rem; max-width: 800px; line-height: 1.6;">
+                This experiment transforms Bayes' Theorem from a formula into a geometric intuition.
+                It represents probabilities as physical <strong>areas</strong> within a unit square.
+                The <strong>Blue Area</strong> represents True Positives, while the <strong>Red Area</strong> represents
+                False Alarms.
+                By visually comparing these two areas, you can instantly "see" the posterior probability without doing
+                any math.
+            </p>
+            <p style="color: var(--text-secondary); margin-bottom: 2rem; font-size: 0.95rem;">
+                <i class="fa-solid fa-hand-pointer" style="margin-right: 0.5rem; color: var(--accent-cyan);"></i>
+                <strong>Interact:</strong> Drag the vertical line to adjust the Prior (Base Rate). Drag the horizontal
+                bars to change the test's Sensitivity.
             </p>
 
             <div class="glass-card" style="padding: 0;">
