CTL Animation Improve

--- a/AnalyticsIndia-WEB/labs/bayes/index.html
+++ b/AnalyticsIndia-WEB/labs/bayes/index.html
@@ -25,9 +25,10 @@
         <h3 style="margin: 0;">The Unit Square (Bayes)</h3>
 
         <!-- Audio Toggle -->
+        <!-- Audio Toggle -->
         <button id="btn-audio" class="btn"
-            style="background: rgba(255,255,255,0.1); font-size: 0.8rem; padding: 0.5rem 1rem;">
-            <i class="fa-solid fa-volume-xmark" id="audio-icon"></i> Guide: OFF
+            style="background: rgba(6, 182, 212, 0.2); font-size: 0.8rem; padding: 0.5rem 1rem; color: #06b6d4;">
+            <i class="fa-solid fa-volume-high" id="audio-icon"></i> Guide: ON
         </button>
     </nav>
 
