--- a/AnalyticsIndia-WEB/index.html
+++ b/AnalyticsIndia-WEB/index.html
@@ -78,20 +78,71 @@
                     </div>
                 </a>
 
-                <!-- Coming Soon: Regression -->
-                <div class="glass-card lab-card" style="opacity: 0.6; cursor: not-allowed;">
-                    <span class="lab-tag"
-                        style="background: rgba(255, 255, 255, 0.1); color: var(--text-secondary); border-color: transparent;">Coming
-                        Soon</span>
+                <!-- Module 3: Regression -->
+                <a href="labs/regression/" class="glass-card lab-card">
+                    <span class="lab-tag">Module 3</span>
                     <span class="lab-icon">📉</span>
                     <h3>Least Squares Playground</h3>
                     <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
-                        Physically feel the "pull" of outliers on a regression line.
+                        Physically feel the "pull" of outliers on a regression line. Minimize the squared errors
+                        yourself.
                     </p>
-                    <div style="display: flex; align-items: center; color: var(--text-secondary); font-weight: 600;">
-                        Under Construction
+                    <div style="display: flex; align-items: center; color: var(--accent-cyan); font-weight: 600;">
+                        Enter Lab <i class="fa-solid fa-arrow-right" style="margin-left: 0.5rem;"></i>
                     </div>
-                </div>
+                </a>
+
+                <!-- Module 4: Birthday Paradox -->
+                <a href="labs/birthday/" class="glass-card lab-card">
+                    <span class="lab-tag">Module 4</span>
+                    <span class="lab-icon">🎂</span>
+                    <h3>The Birthday Paradox</h3>
+                    <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
+                        How many people do you need for a 50% chance of a shared birthday? (Hint: It's not 183).
+                    </p>
+                    <div style="display: flex; align-items: center; color: var(--accent-cyan); font-weight: 600;">
+                        Enter Lab <i class="fa-solid fa-arrow-right" style="margin-left: 0.5rem;"></i>
+                    </div>
+                </a>
+
+                <!-- Module 5: Confidence Intervals -->
+                <a href="labs/ci/" class="glass-card lab-card">
+                    <span class="lab-tag">Module 5</span>
+                    <span class="lab-icon">🎯</span>
+                    <h3>The Ring Toss (C.I.)</h3>
+                    <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
+                        Toss 100 confidence intervals at a hidden mean. See what "95% confidence" actually looks like.
+                    </p>
+                    <div style="display: flex; align-items: center; color: var(--accent-cyan); font-weight: 600;">
+                        Enter Lab <i class="fa-solid fa-arrow-right" style="margin-left: 0.5rem;"></i>
+                    </div>
+                </a>
+
+                <!-- Module 6: Hypothesis Testing -->
+                <a href="labs/nhst/" class="glass-card lab-card">
+                    <span class="lab-tag">Module 6</span>
+                    <span class="lab-icon">⚖️</span>
+                    <h3>Signal vs Noise (NHST)</h3>
+                    <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
+                        Balance the risk of a False Alarm (Alpha) against a Missed Discovery (Beta).
+                    </p>
+                    <div style="display: flex; align-items: center; color: var(--accent-cyan); font-weight: 600;">
+                        Enter Lab <i class="fa-solid fa-arrow-right" style="margin-left: 0.5rem;"></i>
+                    </div>
+                </a>
+
+                <!-- Module 7: The Bootstrap -->
+                <a href="labs/bootstrap/" class="glass-card lab-card">
+                    <span class="lab-tag">Module 7</span>
+                    <span class="lab-icon">🥾</span>
+                    <h3>The Bootstrap</h3>
+                    <p style="color: var(--text-secondary); margin-bottom: 1.5rem;">
+                        Pull yourself up by your bootstraps. Estimate error by "cloning" your single sample.
+                    </p>
+                    <div style="display: flex; align-items: center; color: var(--accent-cyan); font-weight: 600;">
+                        Enter Lab <i class="fa-solid fa-arrow-right" style="margin-left: 0.5rem;"></i>
+                    </div>
+                </a>
             </div>
         </section>
     </main>
